--- a/resources/assets/scss/pages/_dashboard.scss
+++ b/resources/assets/scss/pages/_dashboard.scss
@@ -316,4 +316,13 @@
     &--profile {
         background-position: -351px -224px;
     }
+    &--location {
+        background-position: -164px -345px;
+    }
+    &--phone {
+        background-position: -225px -345px;
+    }
+    &--email {
+        background-position: -288px -345px;
+    }
 }
