--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -36,6 +36,7 @@
 @import "components/sliders";
 @import "pages/pages-section";
 @import "pages/dashboard";
+@import "components/tabs-section";
 @import "browsers/safari-only";
 @import "browsers/firefox-only";
 @import "browsers/ie-only";
