--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1487,49 +1487,6 @@
         }
     }
     
-    .chapter-tab {
-        margin: 50px 0;
-        margin-bottom: 60px;
-        &__tab {
-            margin-bottom: 35px;
-            border: 0 !important;
-            @include flex;
-            border-bottom: 1px solid $color-gray !important;
-            li {
-                width: 50%;
-                a {
-                    border: 0 !important;
-                    background: transparent !important;
-                    padding: 15px 0;
-                    text-align: center;
-                    font-weight: 800;
-                    text-transform: uppercase;
-                    color: $color-black;
-                    border-bottom: 2px solid transparent;
-                    font-size: 1.5em;
-                    &.nav-link {
-                        &.active {
-                            color: $color-secondary;
-                            border-bottom: 2px solid $color-secondary !important;
-                        }
-                    }
-                }
-            }
-        }
-        &__content {
-            .container {
-                max-width: 100%;
-                padding: 0;
-            }
-        }
-        &__item {
-            .btn {
-                border: 1px solid $color-gray;
-                color: $color-gray;
-            }
-        }
-    }
-    
     .chapter-list-view {
         &__item {
             border: 1px solid $color-gray;
@@ -1674,5 +1631,50 @@
                     }
                 }
             }
+        }
+    }
+    
+    .media-thumbnail {
+        margin-bottom: 50px;
+        &__featured {
+            height: 235px;
+            iframe {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__title {
+            h3 {
+                font-size: 1em;
+                font-weight: bold;
+                padding: 18px 0;
+                border-bottom: 1px solid #ddd;
+            }
+        }
+        &__button {
+            h4 {
+                font-size: .8em;
+                display: block;
+                text-align: center;
+                padding: 10px 0;
+            }
+            .btn {
+                min-width: 100%;
+                padding: 5px;
+                font-weight: bold;
+                font-size: 1.1em;
+                border: 2px solid $color-gray !important;
+                color: $color-dark !important;
+                margin-bottom: 10px;
+                &:hover {
+                    color: $color-white !important;
+                }
+            }
+        }
+    }
+    
+    .moreWebinar {
+        &__item {
+            display: none;
         }
     }
