update for gallery

--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -37,6 +37,7 @@
 @import "pages/pages-section";
 @import "pages/dashboard";
 @import "components/tabs-section";
+@import "components/modals";
 @import "browsers/safari-only";
 @import "browsers/firefox-only";
 @import "browsers/ie-only";
