--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18122,6 +18122,12 @@ img.img-responsive {
   margin-right: 10px;
 }
 
+#loadMore {
+  border: 1px solid #b9b1b2;
+  color: #b9b1b2;
+  margin-bottom: 25px;
+}
+
 header {
   position: relative;
   display: block;
@@ -21016,6 +21022,23 @@ ul.bullet-style li strong {
   display: none;
 }
 
+.photo-section {
+  margin: 50px 0;
+}
+
+.photo-thumbnail {
+  margin-bottom: 50px;
+}
+.photo-thumbnail__image {
+  height: 400px;
+  cursor: pointer;
+}
+.photo-thumbnail__title h3 {
+  font-size: 1.5em;
+  font-weight: bold;
+  padding: 18px 0;
+}
+
 section.page {
   overflow: hidden;
 }
@@ -21511,6 +21534,63 @@ section.page--login .site-content {
 .media-tab__item .btn {
   border: 1px solid #b9b1b2;
   color: #b9b1b2;
+}
+
+.photo-modal .modal-dialog {
+  /* width: 70%; */
+  max-width: 70%;
+  border-radius: 0;
+}
+.photo-modal .modal-dialog * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.photo-modal .modal-dialog .modal-body .container {
+  padding: 0;
+  width: 100%;
+  margin: 0;
+  max-width: 100%;
+}
+.photo-modal .modal-dialog .modal-content {
+  border-radius: 0;
+  height: 800px;
+  overflow-y: scroll;
+}
+.photo-modal .modal-dialog button.close {
+  position: absolute;
+  background: #ab1a2d;
+  right: 0 !important;
+  top: 0;
+  padding: 5px 10px !important;
+  margin: 0 !important;
+  color: #fff;
+  border-radius: 0;
+  z-index: 9;
+  opacity: 1;
+}
+.photo-modal__content {
+  max-width: 94%;
+  padding: 20px !important;
+}
+.photo-modal__gallery {
+  display: flex !important;
+  flex-wrap: wrap !important;
+}
+.photo-modal__gallery--item {
+  width: calc(100%/2);
+  display: block;
+  height: 100px;
+}
+.photo-modal__big-image {
+  height: 550px;
+  background-position: top center !important;
+}
+.photo-modal__title {
+  margin-top: 50px !important;
+}
+.photo-modal__title h3 {
+  font-weight: bold !important;
 }
 
 /* Safari 11+ */
