--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -718,6 +718,11 @@
         @include flex;
         @include flex-align-items(center);
         position: relative;
+        &--plain {
+            &:before {
+                display: none;
+            }
+        }
         &__wrapper {
             position: relative;
             height: 100%;
@@ -1683,6 +1688,11 @@
         margin: 50px 0;
     }
     
+    .benefit-message {
+        max-width: 75%;
+        margin: 50px auto;
+    }
+    
     .photo-thumbnail {
         margin-bottom: 50px;
         &__image {
@@ -1695,5 +1705,13 @@
                 font-weight: bold;
                 padding: 18px 0;
             }
+        }
+    }
+    
+    .membership-slider {
+        .container-max {
+            max-width: 100%;
+            padding: 0;
+            padding-left: 7%;
         }
     }
