--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -38,6 +38,7 @@
 @import "pages/dashboard";
 @import "components/tabs-section";
 @import "components/modals";
+@import "components/step-wizard";
 @import "browsers/safari-only";
 @import "browsers/firefox-only";
 @import "browsers/ie-only";
