--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -39,6 +39,7 @@
 @import "components/tabs-section";
 @import "components/modals";
 @import "components/step-wizard";
+@import "components/chapter-elements";
 @import "browsers/safari-only";
 @import "browsers/firefox-only";
 @import "browsers/ie-only";
