--- a/resources/assets/scss/components/_banner.scss
+++ b/resources/assets/scss/components/_banner.scss
@@ -147,6 +147,9 @@ $banner-background-color:#000;
                     color: #303132;
                     font: 900 65px $font-primary;
                 }
+                img {
+                    margin-bottom: 50px;
+                }
             }
         }
         .item-right {
@@ -176,8 +179,10 @@ $banner-background-color:#000;
     &__thumb-slide {
         position: absolute;
         top: 140px;
-        left: 40px;
-        width: 100px;
+        // left: 40px;
+        // width: 100px;
+        left: 50px;
+        width: 110px;
         height: 100%;
         z-index: 1;
         .slick-slide {
@@ -270,6 +275,25 @@ $banner-background-color:#000;
         mask-mode: alpha;
         mask-repeat: no-repeat;
         mask-size: 95px;
+    }
+    &__chapter {
+        .banner__image-slide .item-right::before {
+            display: none;
+        }
+        .banner__image-slide {
+            .banner-img-holder {
+                &:before {
+                    content: '';
+                    width: 100px;
+                    height: 100%;
+                    background: url('../images/chapter-banner-cover.png');
+                    position: absolute;
+                    background-size: 100% 100%;
+                    left: 0;
+                    top: 0;
+                }
+            }
+        }
     }
 }
 
